--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -64,13 +64,13 @@
 %
 \begin{abstract}
 	Gradient-based optimization in medical image analysis is computationally intensive, typically relying on fixed high-precision formats (float64 or float32) despite the potential for acceleration via mixed precision. However, current mixed precision methods often require expensive static analysis or fail to adapt dynamically to specific datasets and pipeline execution phases.
-																																																									
+																																																																
 	We introduce DynoMP, a Dynamic Mixed Precision optimization approach that estimates and adjusts the minimum required bit-width at runtime to maintain convergence accuracy. We evaluated DynoMP on both the classical ANTs registration pipeline (using the CoRR BMB\_1 dataset) and DL model training, including MNIST, VoxelMorph 2D, and VoxelMorph 3D (using the MNIST and OASIS datasets). Our results demonstrate that DynoMP can significantly reduce precision compared to default float64 or float32 baselines by adapting to the problem at runtime, all while maintaining the accuracy of the baseline method. This dynamic approach offers a promising pathway for achieving resource-efficient and high-performance medical image computing.
-																																																																				
+																																																																											
 	Code is available at \url{https://anonymous.4open.science/r/DynoMP-83F2}.
-																																																																				
+																																																																											
 	\keywords{Mixed Precision \and Image Registration \and Deep Learning.}
-																																																																			
+																																																																										
 \end{abstract}
 %
 %
@@ -80,7 +80,7 @@ Gradient-based optimization drives many medical image analysis tasks, from class
 
 Mixed precision computing addresses this by strategically combining high- and low-precision arithmetic to reduce resource usage while maintaining accuracy. Since computational complexity scales quadratically with bit-width~\cite{Wang2019-qe}, moving away from standard double (FP64) or single (FP32) precision yields substantial gains. While DL frameworks like PyTorch~\cite{Paszke2019-vk} widely adopt Automatic Mixed Precision (AMP), its application in classical medical imaging remains limited. Instead, current acceleration efforts focus largely on hardware-specific implementations (e.g., FireANTs~\cite{Jena2024-ud}) or DL-based substitutes (e.g., VoxelMorph~\cite{Balakrishnan2019-rx}, FastSurfer~\cite{Henschel2022-wa}). However, these methods are not mutually exclusive with precision optimization; dynamic precision control could benefit both CPU-based pipelines and modern GPU-accelerated models.
 
-Applying reduced precision requires caution. For example, registration is an ill-posed optimization problem where errors can amplify across multi-resolution stages. Recent work~\cite{Mirhakimi2025-qb} shows that numerical uncertainty in ANTs linear registration can induce artifacts comparable to physical head motion (0.2mm). Therefore, precision reduction must be managed carefully to preserve anatomical integrity. Similarly for DL models, if this noise exceeds the gradient signal, optimization can stall or diverge. Standard AMP in PyTorch primarily addresses underflow issues through loss scaling and manages dynamic range but does not dynamically assess whether the mantissa bits are sufficient to represent the update direction accurately. While, existing tools like Verificarlo~\cite{Denis2015-zf,Chatelain2019-vw} enable rigorous precision analysis they incur prohibitive runtime overheads ($2.6\times$ to $16.8\times$)~\cite{Chatelain2019-vw}, making them unsuitable for real-time optimization. Conversely, standard AMP handles underflow via loss scaling but does not dynamically assess if mantissa bits are sufficient to represent gradient updates accurately.
+Applying reduced precision requires caution. For example, registration is an ill-posed optimization problem where errors can amplify across multi-resolution stages. Recent work~\cite{Mirhakimi2025-qb} shows that numerical uncertainty in ANTs linear registration can induce artifacts comparable to physical head motion (0.2mm). Therefore, precision reduction must be managed carefully to preserve anatomical integrity. Similarly for DL models, if this noise exceeds the gradient signal, optimization can stall or diverge. Standard AMP in PyTorch primarily addresses underflow issues through loss scaling and manages dynamic range but does not dynamically assess whether the mantissa bits are sufficient to represent the update direction accurately. While, existing tools like Verificarlo~\cite{Denis2015-zf,Chatelain2019-vw} enable rigorous precision analysis they incur prohibitive runtime overheads ($2.6\times$ to $16.8\times$)~\cite{Chatelain2019-vw}, making them unsuitable for real-time optimization. Furthermore, Verificarlo is limited to instrumentation on CPU. Conversely, standard AMP handles underflow via loss scaling but does not dynamically assess if mantissa bits are sufficient to represent gradient updates accurately.
 
 In this work, we introduce DynoMP, a dynamic mixed precision method that adjusts bit-width at runtime based on optimization stability. Unlike fixed heuristics, DynoMP estimates the gradient's signal-to-noise ratio to determine the minimum required precision per optimization step. We evaluate our method on diverse tasks: classical ANTs registration~\cite{Avants2020-xx}, MNIST classification~\cite{Deng2012-hh}, and VoxelMorph registration~\cite{Balakrishnan2019-rx}. We demonstrate that DynoMP maintains baseline accuracy while unlocking the efficiency of lower-precision formats. Our key contributions are: (1) a theoretical framework for estimating minimum precision requirements; (2) a practical dynamic precision control implementation for classical and DL pipelines; and (3) empirical validation demonstrating resource-efficient medical image computing.
 
@@ -98,26 +98,24 @@ In practice, computing the Lipschitz constant $K$ is non-trivial, so we empirica
 To compute the norm of $\theta$ and $\nabla\mathcal{L}(\theta)$, we flatten their values into a single vector and compute the Euclidean norm. We modified the ITK library and developed a drop-in Python function for PyTorch training to retrieve these metrics at each iterations, compute $p_{min}$, and dynamically adjust the precision of the subsequent iteration accordingly. This method allows us to adapt the precision requirements in real-time, ensuring that we maintain convergence while optimizing computational efficiency.
 
 \subsection{Dynamic Precision Control Policy}
-Because hardware and software libraries only support discrete precision formats, the continuous estimate $p_{min}$ must be mapped to a usable bit-width. To prevent excessive casting overhead caused by oscillating precision requirements between iterations, we first apply a moving average filter (window $N=5$) to yield a smoothed estimate $\bar{p}_{min}$. 
+To prevent excessive casting overhead caused by oscillating precision requirements between iterations, we first apply a moving average filter (window $N=5$) to yield a smoothed estimate $\bar{p}_{min}$. 
 
-We then define a set of available precision formats $\mathcal{P}$ (e.g., corresponding to FP16, BF16, FP32, etc.). At each optimization step, the target precision $p_{target}$ is selected by rounding up to the nearest supported format:
-\begin{equation}
-    p_{target} = \min \{ p \in \mathcal{P} \mid p \ge \bar{p}_{min} \}
-\end{equation}
-This policy guarantees that the selected precision always satisfies the theoretical lower bound required for stability, while aggressively downcasting whenever the optimization landscape permits.
+Because hardware and software libraries only support discrete precision formats, the continuous estimate $p_{min}$ must be mapped to a usable bit-width. We define a set of available precision formats $\mathcal{P}$ (e.g., corresponding to FP16, BF16, FP32, etc.). At each optimization step, the target precision $p_{target}$ is selected by rounding up to the nearest supported format $p_{target} = \min \{ p \in \mathcal{P} \mid p \ge \bar{p}_{min} \}$. This policy guarantees that the selected precision always satisfies the theoretical lower bound required for stability, while aggressively downcasting whenever the optimization landscape permits.
 
-
+\subsection{Virtual Precision Simulation}
+Validating convergence behavior across arbitrary bit-widths is challenging due to limited hardware support for non-standard floating-point formats. To address this, we use the VPREC backend from Verificarlo~\cite{Chatelain2019-vw}, which instruments standard floating-point operations to simulate reduced precision by truncating mantissa bits. This approach allows us to model numerical noise and stability on standard CPUs without requiring specialized hardware. To integrate this, we recompiled the ITK library with Verificarlo support and modified the ANTs registration pipeline to link against this instrumented build. We excluded critical metric calculations from instrumentation to prevent convergence failure. At each step, arithmetic operations are cast to the target virtual precision $p_{target}$, enabling the evaluation of DynoMP's policy across a extensive collection of data formats without extensive re-engineering of the underlying libraries.
 
 \section{Experiments}
-\subsection{ANTs registration}
+\subsection{Pipelines and Datasets}
+\subsubsection{ANTs Registration}
 We used the standard ANTs registration~\cite{Avants2008-ea} pipeline (based on ITK~\cite{McCormick2014-ok, Yoo2002-ve}), which performs sequential rigid, affine, and Symmetric Normalization (SyN) stages across four multi-resolution levels. The optimization minimizes Mutual Information (MI) for linear stages and Cross-Correlation (CC) for the deformable SyN stage, iterating until convergence ($10^{-6}$) or a maximum iteration count is reached.
 
 We used the \textit{BMB\_1} site ($N=50$) from the CoRR dataset~\cite{Zuo2014-ub}. We processed the anatomical T1-weighted volumes, performing skull-stripping using the \textit{antsBrainExtraction.sh} script. Brain-extracted volumes were visually quality-controlled against the TemplateFlow tpl-MNI152NLin2009cAsym template.
 
-\subsection{MNIST Classification}
+\subsubsection{MNIST Classification}
 We trained a standard convolutional neural network (CNN) on the MNIST dataset~\cite{Deng2012-hh}, utilizing the architecture defined in the official PyTorch examples\footnote{https://github.com/pytorch/examples/tree/main/mnist}. The network consists of two convolutional layers with max-pooling, followed by two fully connected layers using ReLU activations and dropout. Training was performed for 14 epochs with a batch size of 64, optimized using Adadelta~\cite{Zeiler2012-tn} (learning rate 1.0).
 
-\subsection{VoxelMorph}
+\subsubsection{VoxelMorph}
 VoxelMorph~\cite{Balakrishnan2019-rx} is a UNet~\cite{Ronneberger2015-dn, Isola2016-lu} model for image registration which learns to predict deformation fields between pairs of images. We trained two versions of the model: a 2D version aligning single slices and a 3D version aligning whole volumes. Both models were trained for 100 epochs using the Adam optimizer~\cite{Kingma2014-uf} with a learning rate of $10^{-4}$ and a batch size of 4. The loss function combined mean squared error (MSE) for image similarity and a regularization term to encourage smooth deformations.
 
 We trained the VoxelMorph 2D and 3D models using the Neurite OASIS dataset~\cite{Marcus2007-nm, Hoopes2022-is}, which contains 414 T1-weighted MRI scans. We used the provided affine-aligned volumes and slices (aligned\_norm.nii.gz, slice\_norm.nii.gz), randomly sampling image pairs to learn deformation fields. The data is available at: \url{https://github.com/adalca/medical-datasets/blob/master/neurite-oasis.md}.
@@ -146,8 +144,9 @@ Figure~\ref{fig:ants-pmin} depicts the estimated $p_{min}$ from our model across
 	\label{fig:ants-pmin}
 \end{figure*}
 
+\MD{TODO: rework this paragraph based on the stat test we end up choosing.}
 We assessed the non-inferiority of our method compared to the FP64 baseline using a one-tailed T-test ($\alpha = 0.05$), testing whether the relative loss difference exceeded a tolerance of $5 \times 10^4$. The test was applied to the final output of each stage, with Bonferroni correction for multiple comparisons. The null hypothesis was not rejected for any stage or level (Table~\ref{tab:ants-ttest}), confirming that DynoMP maintains accuracy comparable to the FP64 baseline. Figure~\ref{fig:ants-loss} depicts the distribution of relative loss differences across stages and levels.
-\begin{table}[h]
+\begin{table}[htb!]
 	\centering
 	\caption{Corrected p-values by Registration Stage and Level}
 	\begin{tabular}{lcccc}
@@ -161,16 +160,16 @@ We assessed the non-inferiority of our method compared to the FP64 baseline usin
 		\multicolumn{5}{l}{\small \textit{Bold values indicate statistical significance.}}
 	\end{tabular}
 \end{table}
-\begin{figure*}[htb!]
+\begin{figure}[htb!]
 	\centering
 	\includegraphics[width=\textwidth]{figures/rel_diff_fp64_dynomp.png}
 	\caption{ANTs Registration: Relative accuracy difference between our DynoMP method and the FP64 baseline at the final iteration. Lower values indicate better performance for our method. Individual subject differences are shown, along with the mean and quantiles.}
 	\label{fig:ants-loss}
-\end{figure*}
+\end{figure}
 
-Figure~\ref{fig:pytorch-pmin} shows the estimated $p_{min}$ across iterations for the Pytorch models. For MNIST, our model estimate a $p_min$ of FP16 for the early iteration, but it quickly increases to FP32 and remains for the rest of the training. If FP24 hardware were available, it could be leveraged for a majority (64\%) of the training. As with the ANTs registration, we observe a general increase in required precision across iterations of a specific resolution level.
+Figure~\ref{fig:pytorch-pmin} shows the estimated $p_{min}$ across iterations for the Pytorch models. For MNIST, our model estimate a $p_{min}$ of FP16 for the early iteration, but it quickly increases to FP32 and remains for the rest of the training. If FP24 hardware were available, it could be leveraged for a majority (64\%) of the training. As with the ANTs registration, we observe a general increase in required precision across iterations.
 
-VoxelMorph 2D and 3D models require FP24 precision in the vast majority of iteration; only a limited number ($<10$) of the initial batches require FP16 precision. However, due to the lack of FP24 hardware support on H100 GPUs, we used FP32 instead. BF16 and AMP strategies training diverges after a few batches. Again, we observe a general increase in required precision across iterations, although plateauing after the first 2,000 batches.
+VoxelMorph 2D and 3D models require FP24 precision in the vast majority of iteration; only a limited number ($<10$) of the initial batches require FP16 precision. However, due to the lack of FP24 hardware support on H100 GPUs, we used FP32 instead. BF16 and AMP strategies training diverges after a few batches. We omit the results for FP16, as the gradient vanished, preventing estimation of $p_{min}$. Again, we observe a general increase in required precision across iterations, although plateauing after the first 2,000 batches.
 \begin{figure*}[htb!]
 	\centering
 	\begin{subfigure}{0.32\textwidth}
@@ -212,24 +211,27 @@ VoxelMorph 2D and 3D models require FP24 precision in the vast majority of itera
 		\caption{VoxelMorph 3D}
 		\label{subfig:vm3d-loss}
 	\end{subfigure}
-	\caption{Loss Curves for the PyTorch Models batches for the PyTorch models.}
+	\caption{Loss curves across training batches for the PyTorch models. The color of the data points indicates the data format used at runtime.}
 	\label{fig:pytorch-loss}
 \end{figure*}
 
 \section{Discussion and Conclusion}
-\subsection{Validity of our Theoretical Model}
-The theorem from Hayford et al.~\cite{Hayford2024-kb} requires two assumptions: (1) the loss function must be convex, and (2) the gradient of the loss must be K-Lipschitz with $K\le1/\eta$. In practice, verifying these assumptions for complex pipelines is difficult, and for complex optimization problems, the loss convexity assumption is frequently unsatisfied. However, our results demonstrate that we can still leverage this simple model to predict the required minimal precision at each iteration while maintaining acceptable accuracy.
+\subsection{The Need for Intermediate Precision}
+Our analysis indicates a misalignment between current hardware capabilities and the numerical requirements of medical image analysis tasks. In both classical registration (ANTs) and DL models (VoxelMorph), our theoretical model frequently identified FP24 as a sufficient precision level. Standard FP16 and BF16 often led to divergence or significant error amplification, whereas FP32 exceeded the numerical requirements.
 
-We assess accuracy relative to an FP64 baseline; however, the theoretically optimal precision and output remain unknown. In image registration, there is no absolute ground truth, as multiple valid solutions can exist. Therefore, while FP64 serves as a high-precision reference, it should not be mistaken for a ground truth validation.
+Native hardware support for intermediate formats like FP24 is currently limited on standard CPUs and modern GPUs, often necessitating a default to FP32. By quantifying dynamic precision requirements, DynoMP provides empirical evidence for the potential utility of intermediate precision formats. Until such support becomes more widespread, our method offers a strategy for maximizing efficiency on existing architectures by utilizing lower precision formats when numerical stability permits.
 
-\subsection{Implementation Challenges}
-Implementing mixed precision in a production environment presents several practical challenges. For example, the current version of the ITK library contains a bug that forces input data to be cast to double precision during interpolation computations. This results in unnecessary overhead, as the system must cast single-precision inputs to double and back during processing. Correcting this is difficult due to the complexity and scale of the existing codebase. Furthermore, extending support to other data formats remains non-trivial. On the hardware side, support for mixed precision is limited on standard CPUs; while specialized hardware exists, the cost is often prohibitive. Finally, the system's robustness is sensitive to data heterogeneity, which can lead to critical failures when input consistency is not maintained.
+\subsection{Legacy Software Constraints}
+Implementing dynamic mixed precision in existing scientific codebases highlights technical challenges. For example, previous work~\cite{Dugre2025-fs} identified a casting issue in ITK that forces interpolation operations into double precision (FP64). This behavior increases computational overhead and negates the benefits of using lower-precision inputs.
+Addressing this limitation requires refactoring the library's core templated architecture, where high-precision assumptions are deeply embedded. However, our VPREC simulations suggest that overcoming these constraints would yield significant efficiency gains, highlighting the critical need to modernize foundational libraries for flexible, hardware-aware precision control.
 
-When simulating different data formats with VPREC, we modified only the precision bits and ignored the exponent range to limit the overhead of calculating the correct range. This decision is supported by our previous results~\cite{Dugre2025-fs}, which showed no significant difference in accuracy when varying the exponent range between 7 and 8 for precisions ranging from 7 to 23 bits.
+\subsection{Theoretical Applicability}
+The theoretical bound proposed by Hayford et al.~\cite{Hayford2024-kb} assumes conditions such as loss convexity and Lipschitz continuity. In complex tasks like deformable image registration, these assumptions may not strictly hold. Additionally, validation in medical image registration often relies on high-precision (FP64) baselines rather than ground truth, as the problem is ill-posed.
 
-To prevent excessive casting overhead caused by oscillating precision requirements between iterations, we utilize a rolling average over a window size of five. A stricter approach would require the precision to increase monotonically with the iteration count at each resolution level. However, if a noisy prediction were to occur early on, it would unnecessarily penalize performance for the remainder of the level. In future efforts, we could compare both approaches, as well as test different window sizes.
+Despite these factors, our empirical results indicate that the $p_{min}$ estimate serves as a reliable proxy for optimization stability, with DynoMP maintaining baseline accuracy across the tested pipelines. Future work will investigate adaptive smoothing techniques and explore establishing numerical threshold of acceptable accuracy for clinical applications using overlap metrics such as the Dice score.
 
-In summary, this work demonstrates that our theoretical model effectively predicts minimal precision requirements for image registration in ANTs, maintaining accuracy even when strict convexity assumptions are relaxed. We employ a rolling average smoothing strategy to mitigate precision oscillation, avoiding the potential performance penalties of a stricter monotonic approach. However, while the potential for computational efficiency is clear, practical application is currently hindered by a casting bug in the ITK library and limited hardware support for diverse data formats. Future adoption will depend on addressing these infrastructural constraints and validating performance on real hardware, rather than relying on virtual precision simulations.
+\subsection{Conclusion}
+In summary, DynoMP bridges theoretical optimization stability with practical mixed precision computing. By dynamically estimating the minimum required bit-width at runtime, we demonstrate that medical imaging pipelines can operate effectively below standard FP64/FP32 formats without compromising accuracy. While broad adoption is currently limited by complex software architectures and the availability of intermediate-precision hardware, DynoMP establishes a theoretical framework for advancing resource-efficient medical image computing.
 
 % ---- Bibliography ----
 %
